--- a/Matematikk-VGS/Matematikk_1T/Halveringsmetoden.ipynb
+++ b/Matematikk-VGS/Matematikk_1T/Halveringsmetoden.ipynb
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -256,10 +256,10 @@
        "      <defs>\n",
        "       <path d=\"M 0 0 \n",
        "L 0 3.5 \n",
-       "\" id=\"m561cafb894\" style=\"stroke:#000000;stroke-width:0.8;\"/>\n",
+       "\" id=\"mc08f054ea0\" style=\"stroke:#000000;stroke-width:0.8;\"/>\n",
        "      </defs>\n",
        "      <g>\n",
-       "       <use style=\"stroke:#000000;stroke-width:0.8;\" x=\"64.222869\" xlink:href=\"#m561cafb894\" y=\"228.14\"/>\n",
+       "       <use style=\"stroke:#000000;stroke-width:0.8;\" x=\"64.222869\" xlink:href=\"#mc08f054ea0\" y=\"228.14\"/>\n",
        "      </g>\n",
        "     </g>\n",
        "     <g id=\"text_1\">\n",
@@ -311,7 +311,7 @@
        "    <g id=\"xtick_2\">\n",
        "     <g id=\"line2d_2\">\n",
        "      <g>\n",
-       "       <use style=\"stroke:#000000;stroke-width:0.8;\" x=\"114.950142\" xlink:href=\"#m561cafb894\" y=\"228.14\"/>\n",
+       "       <use style=\"stroke:#000000;stroke-width:0.8;\" x=\"114.950142\" xlink:href=\"#mc08f054ea0\" y=\"228.14\"/>\n",
        "      </g>\n",
        "     </g>\n",
        "     <g id=\"text_2\">\n",
@@ -344,7 +344,7 @@
        "    <g id=\"xtick_3\">\n",
        "     <g id=\"line2d_3\">\n",
        "      <g>\n",
-       "       <use style=\"stroke:#000000;stroke-width:0.8;\" x=\"165.677415\" xlink:href=\"#m561cafb894\" y=\"228.14\"/>\n",
+       "       <use style=\"stroke:#000000;stroke-width:0.8;\" x=\"165.677415\" xlink:href=\"#mc08f054ea0\" y=\"228.14\"/>\n",
        "      </g>\n",
        "     </g>\n",
        "     <g id=\"text_3\">\n",
@@ -384,7 +384,7 @@
        "    <g id=\"xtick_4\">\n",
        "     <g id=\"line2d_4\">\n",
        "      <g>\n",
-       "       <use style=\"stroke:#000000;stroke-width:0.8;\" x=\"216.404688\" xlink:href=\"#m561cafb894\" y=\"228.14\"/>\n",
+       "       <use style=\"stroke:#000000;stroke-width:0.8;\" x=\"216.404688\" xlink:href=\"#mc08f054ea0\" y=\"228.14\"/>\n",
        "      </g>\n",
        "     </g>\n",
        "     <g id=\"text_4\">\n",
@@ -420,7 +420,7 @@
        "    <g id=\"xtick_5\">\n",
        "     <g id=\"line2d_5\">\n",
        "      <g>\n",
-       "       <use style=\"stroke:#000000;stroke-width:0.8;\" x=\"267.13196\" xlink:href=\"#m561cafb894\" y=\"228.14\"/>\n",
+       "       <use style=\"stroke:#000000;stroke-width:0.8;\" x=\"267.13196\" xlink:href=\"#mc08f054ea0\" y=\"228.14\"/>\n",
        "      </g>\n",
        "     </g>\n",
        "     <g id=\"text_5\">\n",
@@ -433,7 +433,7 @@
        "    <g id=\"xtick_6\">\n",
        "     <g id=\"line2d_6\">\n",
        "      <g>\n",
-       "       <use style=\"stroke:#000000;stroke-width:0.8;\" x=\"317.859233\" xlink:href=\"#m561cafb894\" y=\"228.14\"/>\n",
+       "       <use style=\"stroke:#000000;stroke-width:0.8;\" x=\"317.859233\" xlink:href=\"#mc08f054ea0\" y=\"228.14\"/>\n",
        "      </g>\n",
        "     </g>\n",
        "     <g id=\"text_6\">\n",
@@ -446,7 +446,7 @@
        "    <g id=\"xtick_7\">\n",
        "     <g id=\"line2d_7\">\n",
        "      <g>\n",
-       "       <use style=\"stroke:#000000;stroke-width:0.8;\" x=\"368.586506\" xlink:href=\"#m561cafb894\" y=\"228.14\"/>\n",
+       "       <use style=\"stroke:#000000;stroke-width:0.8;\" x=\"368.586506\" xlink:href=\"#mc08f054ea0\" y=\"228.14\"/>\n",
        "      </g>\n",
        "     </g>\n",
        "     <g id=\"text_7\">\n",
@@ -485,10 +485,10 @@
        "      <defs>\n",
        "       <path d=\"M 0 0 \n",
        "L -3.5 0 \n",
-       "\" id=\"m4fa6dce487\" style=\"stroke:#000000;stroke-width:0.8;\"/>\n",
+       "\" id=\"m815a839785\" style=\"stroke:#000000;stroke-width:0.8;\"/>\n",
        "      </defs>\n",
        "      <g>\n",
-       "       <use style=\"stroke:#000000;stroke-width:0.8;\" x=\"49.004688\" xlink:href=\"#m4fa6dce487\" y=\"212.765647\"/>\n",
+       "       <use style=\"stroke:#000000;stroke-width:0.8;\" x=\"49.004688\" xlink:href=\"#m815a839785\" y=\"212.765647\"/>\n",
        "      </g>\n",
        "     </g>\n",
        "     <g id=\"text_9\">\n",
@@ -542,7 +542,7 @@
        "    <g id=\"ytick_2\">\n",
        "     <g id=\"line2d_9\">\n",
        "      <g>\n",
-       "       <use style=\"stroke:#000000;stroke-width:0.8;\" x=\"49.004688\" xlink:href=\"#m4fa6dce487\" y=\"185.311074\"/>\n",
+       "       <use style=\"stroke:#000000;stroke-width:0.8;\" x=\"49.004688\" xlink:href=\"#m815a839785\" y=\"185.311074\"/>\n",
        "      </g>\n",
        "     </g>\n",
        "     <g id=\"text_10\">\n",
@@ -557,7 +557,7 @@
        "    <g id=\"ytick_3\">\n",
        "     <g id=\"line2d_10\">\n",
        "      <g>\n",
-       "       <use style=\"stroke:#000000;stroke-width:0.8;\" x=\"49.004688\" xlink:href=\"#m4fa6dce487\" y=\"157.856501\"/>\n",
+       "       <use style=\"stroke:#000000;stroke-width:0.8;\" x=\"49.004688\" xlink:href=\"#m815a839785\" y=\"157.856501\"/>\n",
        "      </g>\n",
        "     </g>\n",
        "     <g id=\"text_11\">\n",
@@ -571,7 +571,7 @@
        "    <g id=\"ytick_4\">\n",
        "     <g id=\"line2d_11\">\n",
        "      <g>\n",
-       "       <use style=\"stroke:#000000;stroke-width:0.8;\" x=\"49.004688\" xlink:href=\"#m4fa6dce487\" y=\"130.401928\"/>\n",
+       "       <use style=\"stroke:#000000;stroke-width:0.8;\" x=\"49.004688\" xlink:href=\"#m815a839785\" y=\"130.401928\"/>\n",
        "      </g>\n",
        "     </g>\n",
        "     <g id=\"text_12\">\n",
@@ -584,7 +584,7 @@
        "    <g id=\"ytick_5\">\n",
        "     <g id=\"line2d_12\">\n",
        "      <g>\n",
-       "       <use style=\"stroke:#000000;stroke-width:0.8;\" x=\"49.004688\" xlink:href=\"#m4fa6dce487\" y=\"102.947355\"/>\n",
+       "       <use style=\"stroke:#000000;stroke-width:0.8;\" x=\"49.004688\" xlink:href=\"#m815a839785\" y=\"102.947355\"/>\n",
        "      </g>\n",
        "     </g>\n",
        "     <g id=\"text_13\">\n",
@@ -597,7 +597,7 @@
        "    <g id=\"ytick_6\">\n",
        "     <g id=\"line2d_13\">\n",
        "      <g>\n",
-       "       <use style=\"stroke:#000000;stroke-width:0.8;\" x=\"49.004688\" xlink:href=\"#m4fa6dce487\" y=\"75.492782\"/>\n",
+       "       <use style=\"stroke:#000000;stroke-width:0.8;\" x=\"49.004688\" xlink:href=\"#m815a839785\" y=\"75.492782\"/>\n",
        "      </g>\n",
        "     </g>\n",
        "     <g id=\"text_14\">\n",
@@ -611,7 +611,7 @@
        "    <g id=\"ytick_7\">\n",
        "     <g id=\"line2d_14\">\n",
        "      <g>\n",
-       "       <use style=\"stroke:#000000;stroke-width:0.8;\" x=\"49.004688\" xlink:href=\"#m4fa6dce487\" y=\"48.038209\"/>\n",
+       "       <use style=\"stroke:#000000;stroke-width:0.8;\" x=\"49.004688\" xlink:href=\"#m815a839785\" y=\"48.038209\"/>\n",
        "      </g>\n",
        "     </g>\n",
        "     <g id=\"text_15\">\n",
@@ -625,7 +625,7 @@
        "    <g id=\"ytick_8\">\n",
        "     <g id=\"line2d_15\">\n",
        "      <g>\n",
-       "       <use style=\"stroke:#000000;stroke-width:0.8;\" x=\"49.004688\" xlink:href=\"#m4fa6dce487\" y=\"20.583636\"/>\n",
+       "       <use style=\"stroke:#000000;stroke-width:0.8;\" x=\"49.004688\" xlink:href=\"#m815a839785\" y=\"20.583636\"/>\n",
        "      </g>\n",
        "     </g>\n",
        "     <g id=\"text_16\">\n",
@@ -711,7 +711,7 @@
        "    </g>\n",
        "   </g>\n",
        "   <g id=\"line2d_16\">\n",
-       "    <path clip-path=\"url(#p545159f0e5)\" d=\"M 64.222869 20.583636 \n",
+       "    <path clip-path=\"url(#pb68e7b3920)\" d=\"M 64.222869 20.583636 \n",
        "L 70.316235 36.09639 \n",
        "L 76.104933 50.24643 \n",
        "L 81.893631 63.824446 \n",
@@ -855,7 +855,7 @@
        "  </g>\n",
        " </g>\n",
        " <defs>\n",
-       "  <clipPath id=\"p545159f0e5\">\n",
+       "  <clipPath id=\"pb68e7b3920\">\n",
        "   <rect height=\"217.44\" width=\"334.8\" x=\"49.004688\" y=\"10.7\"/>\n",
        "  </clipPath>\n",
        " </defs>\n",
@@ -890,20 +890,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "x = -4.0000\n"
+      "x = -4.0000076294\n"
      ]
     }
    ],
    "source": [
-    "x_1 = halveringsmetoden(g, -6, 0, 17)\n",
-    "print(f'x = {x_1[0]:.4f}')"
+    "x_1 = halveringsmetoden(g, -6, 0, 18)\n",
+    "print(f'x = {x_1[0]:.10f}')"
    ]
   },
   {
@@ -2080,7 +2080,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2097,7 +2097,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2106,7 +2106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -2146,10 +2146,10 @@
        "      <defs>\n",
        "       <path d=\"M 0 0 \n",
        "L 0 3.5 \n",
-       "\" id=\"m4045d1f5de\" style=\"stroke:#000000;stroke-width:0.8;\"/>\n",
+       "\" id=\"m06fe4012a2\" style=\"stroke:#000000;stroke-width:0.8;\"/>\n",
        "      </defs>\n",
        "      <g>\n",
-       "       <use style=\"stroke:#000000;stroke-width:0.8;\" x=\"57.838494\" xlink:href=\"#m4045d1f5de\" y=\"228.14\"/>\n",
+       "       <use style=\"stroke:#000000;stroke-width:0.8;\" x=\"57.838494\" xlink:href=\"#m06fe4012a2\" y=\"228.14\"/>\n",
        "      </g>\n",
        "     </g>\n",
        "     <g id=\"text_1\">\n",
@@ -2224,7 +2224,7 @@
        "    <g id=\"xtick_2\">\n",
        "     <g id=\"line2d_2\">\n",
        "      <g>\n",
-       "       <use style=\"stroke:#000000;stroke-width:0.8;\" x=\"95.883949\" xlink:href=\"#m4045d1f5de\" y=\"228.14\"/>\n",
+       "       <use style=\"stroke:#000000;stroke-width:0.8;\" x=\"95.883949\" xlink:href=\"#m06fe4012a2\" y=\"228.14\"/>\n",
        "      </g>\n",
        "     </g>\n",
        "     <g id=\"text_2\">\n",
@@ -2279,7 +2279,7 @@
        "    <g id=\"xtick_3\">\n",
        "     <g id=\"line2d_3\">\n",
        "      <g>\n",
-       "       <use style=\"stroke:#000000;stroke-width:0.8;\" x=\"133.929403\" xlink:href=\"#m4045d1f5de\" y=\"228.14\"/>\n",
+       "       <use style=\"stroke:#000000;stroke-width:0.8;\" x=\"133.929403\" xlink:href=\"#m06fe4012a2\" y=\"228.14\"/>\n",
        "      </g>\n",
        "     </g>\n",
        "     <g id=\"text_3\">\n",
@@ -2295,7 +2295,7 @@
        "    <g id=\"xtick_4\">\n",
        "     <g id=\"line2d_4\">\n",
        "      <g>\n",
-       "       <use style=\"stroke:#000000;stroke-width:0.8;\" x=\"171.974858\" xlink:href=\"#m4045d1f5de\" y=\"228.14\"/>\n",
+       "       <use style=\"stroke:#000000;stroke-width:0.8;\" x=\"171.974858\" xlink:href=\"#m06fe4012a2\" y=\"228.14\"/>\n",
        "      </g>\n",
        "     </g>\n",
        "     <g id=\"text_4\">\n",
@@ -2311,7 +2311,7 @@
        "    <g id=\"xtick_5\">\n",
        "     <g id=\"line2d_5\">\n",
        "      <g>\n",
-       "       <use style=\"stroke:#000000;stroke-width:0.8;\" x=\"210.020313\" xlink:href=\"#m4045d1f5de\" y=\"228.14\"/>\n",
+       "       <use style=\"stroke:#000000;stroke-width:0.8;\" x=\"210.020313\" xlink:href=\"#m06fe4012a2\" y=\"228.14\"/>\n",
        "      </g>\n",
        "     </g>\n",
        "     <g id=\"text_5\">\n",
@@ -2326,7 +2326,7 @@
        "    <g id=\"xtick_6\">\n",
        "     <g id=\"line2d_6\">\n",
        "      <g>\n",
-       "       <use style=\"stroke:#000000;stroke-width:0.8;\" x=\"248.065767\" xlink:href=\"#m4045d1f5de\" y=\"228.14\"/>\n",
+       "       <use style=\"stroke:#000000;stroke-width:0.8;\" x=\"248.065767\" xlink:href=\"#m06fe4012a2\" y=\"228.14\"/>\n",
        "      </g>\n",
        "     </g>\n",
        "     <g id=\"text_6\">\n",
@@ -2341,7 +2341,7 @@
        "    <g id=\"xtick_7\">\n",
        "     <g id=\"line2d_7\">\n",
        "      <g>\n",
-       "       <use style=\"stroke:#000000;stroke-width:0.8;\" x=\"286.111222\" xlink:href=\"#m4045d1f5de\" y=\"228.14\"/>\n",
+       "       <use style=\"stroke:#000000;stroke-width:0.8;\" x=\"286.111222\" xlink:href=\"#m06fe4012a2\" y=\"228.14\"/>\n",
        "      </g>\n",
        "     </g>\n",
        "     <g id=\"text_7\">\n",
@@ -2356,7 +2356,7 @@
        "    <g id=\"xtick_8\">\n",
        "     <g id=\"line2d_8\">\n",
        "      <g>\n",
-       "       <use style=\"stroke:#000000;stroke-width:0.8;\" x=\"324.156676\" xlink:href=\"#m4045d1f5de\" y=\"228.14\"/>\n",
+       "       <use style=\"stroke:#000000;stroke-width:0.8;\" x=\"324.156676\" xlink:href=\"#m06fe4012a2\" y=\"228.14\"/>\n",
        "      </g>\n",
        "     </g>\n",
        "     <g id=\"text_8\">\n",
@@ -2371,7 +2371,7 @@
        "    <g id=\"xtick_9\">\n",
        "     <g id=\"line2d_9\">\n",
        "      <g>\n",
-       "       <use style=\"stroke:#000000;stroke-width:0.8;\" x=\"362.202131\" xlink:href=\"#m4045d1f5de\" y=\"228.14\"/>\n",
+       "       <use style=\"stroke:#000000;stroke-width:0.8;\" x=\"362.202131\" xlink:href=\"#m06fe4012a2\" y=\"228.14\"/>\n",
        "      </g>\n",
        "     </g>\n",
        "     <g id=\"text_9\">\n",
@@ -2412,10 +2412,10 @@
        "      <defs>\n",
        "       <path d=\"M 0 0 \n",
        "L -3.5 0 \n",
-       "\" id=\"m8b699cc52c\" style=\"stroke:#000000;stroke-width:0.8;\"/>\n",
+       "\" id=\"mac07835a73\" style=\"stroke:#000000;stroke-width:0.8;\"/>\n",
        "      </defs>\n",
        "      <g>\n",
-       "       <use style=\"stroke:#000000;stroke-width:0.8;\" x=\"42.620313\" xlink:href=\"#m8b699cc52c\" y=\"194.693322\"/>\n",
+       "       <use style=\"stroke:#000000;stroke-width:0.8;\" x=\"42.620313\" xlink:href=\"#mac07835a73\" y=\"194.693322\"/>\n",
        "      </g>\n",
        "     </g>\n",
        "     <g id=\"text_11\">\n",
@@ -2429,7 +2429,7 @@
        "    <g id=\"ytick_2\">\n",
        "     <g id=\"line2d_11\">\n",
        "      <g>\n",
-       "       <use style=\"stroke:#000000;stroke-width:0.8;\" x=\"42.620313\" xlink:href=\"#m8b699cc52c\" y=\"147.566955\"/>\n",
+       "       <use style=\"stroke:#000000;stroke-width:0.8;\" x=\"42.620313\" xlink:href=\"#mac07835a73\" y=\"147.566955\"/>\n",
        "      </g>\n",
        "     </g>\n",
        "     <g id=\"text_12\">\n",
@@ -2442,7 +2442,7 @@
        "    <g id=\"ytick_3\">\n",
        "     <g id=\"line2d_12\">\n",
        "      <g>\n",
-       "       <use style=\"stroke:#000000;stroke-width:0.8;\" x=\"42.620313\" xlink:href=\"#m8b699cc52c\" y=\"100.440587\"/>\n",
+       "       <use style=\"stroke:#000000;stroke-width:0.8;\" x=\"42.620313\" xlink:href=\"#mac07835a73\" y=\"100.440587\"/>\n",
        "      </g>\n",
        "     </g>\n",
        "     <g id=\"text_13\">\n",
@@ -2455,7 +2455,7 @@
        "    <g id=\"ytick_4\">\n",
        "     <g id=\"line2d_13\">\n",
        "      <g>\n",
-       "       <use style=\"stroke:#000000;stroke-width:0.8;\" x=\"42.620313\" xlink:href=\"#m8b699cc52c\" y=\"53.31422\"/>\n",
+       "       <use style=\"stroke:#000000;stroke-width:0.8;\" x=\"42.620313\" xlink:href=\"#mac07835a73\" y=\"53.31422\"/>\n",
        "      </g>\n",
        "     </g>\n",
        "     <g id=\"text_14\">\n",
@@ -2545,7 +2545,7 @@
        "    </g>\n",
        "   </g>\n",
        "   <g id=\"line2d_14\">\n",
-       "    <path clip-path=\"url(#pf2d37aff01)\" d=\"M 57.838494 97.251657 \n",
+       "    <path clip-path=\"url(#p84fcdc20b9)\" d=\"M 57.838494 97.251657 \n",
        "L 64.541197 107.153347 \n",
        "L 71.2439 116.662318 \n",
        "L 77.946602 125.776082 \n",
@@ -2735,7 +2735,7 @@
        "  </g>\n",
        " </g>\n",
        " <defs>\n",
-       "  <clipPath id=\"pf2d37aff01\">\n",
+       "  <clipPath id=\"p84fcdc20b9\">\n",
        "   <rect height=\"217.44\" width=\"334.8\" x=\"42.620313\" y=\"10.7\"/>\n",
        "  </clipPath>\n",
        " </defs>\n",
@@ -3979,7 +3979,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
