--- a/03_Løsningsforslag/Oppgaver-fra-boka/7_Derivasjon_og_integrasjon_løsningsforslag.ipynb
+++ b/03_Løsningsforslag/Oppgaver-fra-boka/7_Derivasjon_og_integrasjon_løsningsforslag.ipynb
@@ -36,12 +36,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def derivert(f, x, delta_x=1e-08):\n",
+    "def derivert(f, a, delta_x=1e-08):\n",
     "    '''\n",
     "        Deriverte med Newtons kvotient\n",
     "        Input: f: funksjonen, x: x-verdi, delta_x: punktavstand\n",
     "    '''\n",
-    "    return ( f(x+delta_x) -  f(x) )/delta_x "
+    "    return ( f(a+delta_x) -  f(a) )/delta_x "
    ]
   },
   {
@@ -11646,7 +11646,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
