--- a/Matematikk-VGS/Matematikk_R1/derivasjon.ipynb
+++ b/Matematikk-VGS/Matematikk_R1/derivasjon.ipynb
@@ -177,6 +177,73 @@
    "source": [
     "# Løsningen din her"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Ekstremalpunkt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def ekstremalpunkt(f, a, b, N):\n",
+    "    for i in range(N):\n",
+    "        m = (a + b)/2\n",
+    "        if derivert(f, a, 1E-8) * derivert(f, m, 1E-8) <= 0:\n",
+    "            b = m\n",
+    "        else:\n",
+    "            a = m\n",
+    "        \n",
+    "    return m"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Bunnpunkt = (-0.000, -5.000)\n"
+     ]
+    }
+   ],
+   "source": [
+    "x_bunn = ekstremalpunkt(f, -1, 3, 16)\n",
+    "print(f'Bunnpunkt = ({x_bunn:.3f}, {f(x_bunn):.3f})')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Bilder"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bilde = imread(\"bilde.png\") \n",
+    "imshow(bilde)\n",
+    "savefig(\"original.png\")"
+   ]
   }
  ],
  "metadata": {
