--- a/01_Undervisningsnotater/7.-Derivasjon-og-integrasjon/7.2_Integrasjon.ipynb
+++ b/01_Undervisningsnotater/7.-Derivasjon-og-integrasjon/7.2_Integrasjon.ipynb
@@ -4,27 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 3.4 Terminal\n",
-    "\n",
-    "<img src='terminal.png' width='400px'>"
+    "# 7.2 Integrasjon "
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Console\n",
-    "\n",
-    "<img  align='left' src='python.png' width='300px'>\n",
-    "<img  align='left' src='python2.png' width='500px'>"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
