--- a/01_Undervisningsnotater/7.-Derivasjon-og-integrasjon/7.1_Den_deriverte.ipynb
+++ b/01_Undervisningsnotater/7.-Derivasjon-og-integrasjon/7.1_Den_deriverte.ipynb
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,16 +136,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x1157a8b00>]"
+       "[<matplotlib.lines.Line2D at 0x120ca1128>]"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -186,10 +186,10 @@
        "      <defs>\n",
        "       <path d=\"M 0 0 \n",
        "L 0 3.5 \n",
-       "\" id=\"m27ed55f57f\" style=\"stroke:#000000;stroke-width:0.8;\"/>\n",
+       "\" id=\"m4d47f95e26\" style=\"stroke:#000000;stroke-width:0.8;\"/>\n",
        "      </defs>\n",
        "      <g>\n",
-       "       <use style=\"stroke:#000000;stroke-width:0.8;\" x=\"51.683807\" xlink:href=\"#m27ed55f57f\" y=\"228.14\"/>\n",
+       "       <use style=\"stroke:#000000;stroke-width:0.8;\" x=\"51.683807\" xlink:href=\"#m4d47f95e26\" y=\"228.14\"/>\n",
        "      </g>\n",
        "     </g>\n",
        "     <g id=\"text_1\">\n",
@@ -225,7 +225,7 @@
        "    <g id=\"xtick_2\">\n",
        "     <g id=\"line2d_2\">\n",
        "      <g>\n",
-       "       <use style=\"stroke:#000000;stroke-width:0.8;\" x=\"112.556534\" xlink:href=\"#m27ed55f57f\" y=\"228.14\"/>\n",
+       "       <use style=\"stroke:#000000;stroke-width:0.8;\" x=\"112.556534\" xlink:href=\"#m4d47f95e26\" y=\"228.14\"/>\n",
        "      </g>\n",
        "     </g>\n",
        "     <g id=\"text_2\">\n",
@@ -264,7 +264,7 @@
        "    <g id=\"xtick_3\">\n",
        "     <g id=\"line2d_3\">\n",
        "      <g>\n",
-       "       <use style=\"stroke:#000000;stroke-width:0.8;\" x=\"173.429261\" xlink:href=\"#m27ed55f57f\" y=\"228.14\"/>\n",
+       "       <use style=\"stroke:#000000;stroke-width:0.8;\" x=\"173.429261\" xlink:href=\"#m4d47f95e26\" y=\"228.14\"/>\n",
        "      </g>\n",
        "     </g>\n",
        "     <g id=\"text_3\">\n",
@@ -296,7 +296,7 @@
        "    <g id=\"xtick_4\">\n",
        "     <g id=\"line2d_4\">\n",
        "      <g>\n",
-       "       <use style=\"stroke:#000000;stroke-width:0.8;\" x=\"234.301989\" xlink:href=\"#m27ed55f57f\" y=\"228.14\"/>\n",
+       "       <use style=\"stroke:#000000;stroke-width:0.8;\" x=\"234.301989\" xlink:href=\"#m4d47f95e26\" y=\"228.14\"/>\n",
        "      </g>\n",
        "     </g>\n",
        "     <g id=\"text_4\">\n",
@@ -341,7 +341,7 @@
        "    <g id=\"xtick_5\">\n",
        "     <g id=\"line2d_5\">\n",
        "      <g>\n",
-       "       <use style=\"stroke:#000000;stroke-width:0.8;\" x=\"295.174716\" xlink:href=\"#m27ed55f57f\" y=\"228.14\"/>\n",
+       "       <use style=\"stroke:#000000;stroke-width:0.8;\" x=\"295.174716\" xlink:href=\"#m4d47f95e26\" y=\"228.14\"/>\n",
        "      </g>\n",
        "     </g>\n",
        "     <g id=\"text_5\">\n",
@@ -395,7 +395,7 @@
        "    <g id=\"xtick_6\">\n",
        "     <g id=\"line2d_6\">\n",
        "      <g>\n",
-       "       <use style=\"stroke:#000000;stroke-width:0.8;\" x=\"356.047443\" xlink:href=\"#m27ed55f57f\" y=\"228.14\"/>\n",
+       "       <use style=\"stroke:#000000;stroke-width:0.8;\" x=\"356.047443\" xlink:href=\"#m4d47f95e26\" y=\"228.14\"/>\n",
        "      </g>\n",
        "     </g>\n",
        "     <g id=\"text_6\">\n",
@@ -428,10 +428,10 @@
        "      <defs>\n",
        "       <path d=\"M 0 0 \n",
        "L -3.5 0 \n",
-       "\" id=\"m6be22378bf\" style=\"stroke:#000000;stroke-width:0.8;\"/>\n",
+       "\" id=\"m17e5685bdb\" style=\"stroke:#000000;stroke-width:0.8;\"/>\n",
        "      </defs>\n",
        "      <g>\n",
-       "       <use style=\"stroke:#000000;stroke-width:0.8;\" x=\"36.465625\" xlink:href=\"#m6be22378bf\" y=\"218.256943\"/>\n",
+       "       <use style=\"stroke:#000000;stroke-width:0.8;\" x=\"36.465625\" xlink:href=\"#m17e5685bdb\" y=\"218.256943\"/>\n",
        "      </g>\n",
        "     </g>\n",
        "     <g id=\"text_7\">\n",
@@ -455,7 +455,7 @@
        "    <g id=\"ytick_2\">\n",
        "     <g id=\"line2d_8\">\n",
        "      <g>\n",
-       "       <use style=\"stroke:#000000;stroke-width:0.8;\" x=\"36.465625\" xlink:href=\"#m6be22378bf\" y=\"189.939564\"/>\n",
+       "       <use style=\"stroke:#000000;stroke-width:0.8;\" x=\"36.465625\" xlink:href=\"#m17e5685bdb\" y=\"189.939564\"/>\n",
        "      </g>\n",
        "     </g>\n",
        "     <g id=\"text_8\">\n",
@@ -471,7 +471,7 @@
        "    <g id=\"ytick_3\">\n",
        "     <g id=\"line2d_9\">\n",
        "      <g>\n",
-       "       <use style=\"stroke:#000000;stroke-width:0.8;\" x=\"36.465625\" xlink:href=\"#m6be22378bf\" y=\"161.622184\"/>\n",
+       "       <use style=\"stroke:#000000;stroke-width:0.8;\" x=\"36.465625\" xlink:href=\"#m17e5685bdb\" y=\"161.622184\"/>\n",
        "      </g>\n",
        "     </g>\n",
        "     <g id=\"text_9\">\n",
@@ -487,7 +487,7 @@
        "    <g id=\"ytick_4\">\n",
        "     <g id=\"line2d_10\">\n",
        "      <g>\n",
-       "       <use style=\"stroke:#000000;stroke-width:0.8;\" x=\"36.465625\" xlink:href=\"#m6be22378bf\" y=\"133.304805\"/>\n",
+       "       <use style=\"stroke:#000000;stroke-width:0.8;\" x=\"36.465625\" xlink:href=\"#m17e5685bdb\" y=\"133.304805\"/>\n",
        "      </g>\n",
        "     </g>\n",
        "     <g id=\"text_10\">\n",
@@ -503,7 +503,7 @@
        "    <g id=\"ytick_5\">\n",
        "     <g id=\"line2d_11\">\n",
        "      <g>\n",
-       "       <use style=\"stroke:#000000;stroke-width:0.8;\" x=\"36.465625\" xlink:href=\"#m6be22378bf\" y=\"104.987425\"/>\n",
+       "       <use style=\"stroke:#000000;stroke-width:0.8;\" x=\"36.465625\" xlink:href=\"#m17e5685bdb\" y=\"104.987425\"/>\n",
        "      </g>\n",
        "     </g>\n",
        "     <g id=\"text_11\">\n",
@@ -519,7 +519,7 @@
        "    <g id=\"ytick_6\">\n",
        "     <g id=\"line2d_12\">\n",
        "      <g>\n",
-       "       <use style=\"stroke:#000000;stroke-width:0.8;\" x=\"36.465625\" xlink:href=\"#m6be22378bf\" y=\"76.670046\"/>\n",
+       "       <use style=\"stroke:#000000;stroke-width:0.8;\" x=\"36.465625\" xlink:href=\"#m17e5685bdb\" y=\"76.670046\"/>\n",
        "      </g>\n",
        "     </g>\n",
        "     <g id=\"text_12\">\n",
@@ -535,7 +535,7 @@
        "    <g id=\"ytick_7\">\n",
        "     <g id=\"line2d_13\">\n",
        "      <g>\n",
-       "       <use style=\"stroke:#000000;stroke-width:0.8;\" x=\"36.465625\" xlink:href=\"#m6be22378bf\" y=\"48.352666\"/>\n",
+       "       <use style=\"stroke:#000000;stroke-width:0.8;\" x=\"36.465625\" xlink:href=\"#m17e5685bdb\" y=\"48.352666\"/>\n",
        "      </g>\n",
        "     </g>\n",
        "     <g id=\"text_13\">\n",
@@ -551,7 +551,7 @@
        "    <g id=\"ytick_8\">\n",
        "     <g id=\"line2d_14\">\n",
        "      <g>\n",
-       "       <use style=\"stroke:#000000;stroke-width:0.8;\" x=\"36.465625\" xlink:href=\"#m6be22378bf\" y=\"20.035287\"/>\n",
+       "       <use style=\"stroke:#000000;stroke-width:0.8;\" x=\"36.465625\" xlink:href=\"#m17e5685bdb\" y=\"20.035287\"/>\n",
        "      </g>\n",
        "     </g>\n",
        "     <g id=\"text_14\">\n",
@@ -566,7 +566,7 @@
        "    </g>\n",
        "   </g>\n",
        "   <g id=\"line2d_15\">\n",
-       "    <path clip-path=\"url(#p3cc49de7b4)\" d=\"M 51.683807 141.783027 \n",
+       "    <path clip-path=\"url(#p4591d3b561)\" d=\"M 51.683807 141.783027 \n",
        "L 82.12017 210.611081 \n",
        "L 112.556534 217.492372 \n",
        "L 142.992898 218.180468 \n",
@@ -602,7 +602,7 @@
        "  </g>\n",
        " </g>\n",
        " <defs>\n",
-       "  <clipPath id=\"p3cc49de7b4\">\n",
+       "  <clipPath id=\"p4591d3b561\">\n",
        "   <rect height=\"217.44\" width=\"334.8\" x=\"36.465625\" y=\"10.7\"/>\n",
        "  </clipPath>\n",
        " </defs>\n",
@@ -5191,11 +5191,114 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Oppgave 7.10"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def u(x):\n",
+    "    return x**3 + 3*x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def v(x):\n",
+    "    return np.sqrt(np.log(x) + x**2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def uv(x):\n",
+    "    return u(x)*v(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "venstre1 = derivert((uv),7)\n",
+    "hoyre1 = derivert(u,7)*v(7) + derivert(v,7)*u(7)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1431.27 = 1431.27\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f'{venstre1:.2f} = {hoyre1:.2f}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def udelv(x):\n",
+    "    return u(x)/v(x) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "venstre2 = derivert(udelv, 7)\n",
+    "hoyre2 = (derivert(u,7)*v(7) - derivert(v,7)*u(7))/(v(7)**2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "13.94 = 13.94\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f'{venstre2:.2f} = {hoyre2:.2f}')"
+   ]
   }
  ],
  "metadata": {
