--- a/01_Undervisningsnotater/9.-Likninger/Newtons_metode.ipynb
+++ b/01_Undervisningsnotater/9.-Likninger/Newtons_metode.ipynb
@@ -30,6 +30,8 @@
    "source": [
     "### Neste x-verdi\n",
     "\n",
+    "<a href='https://www.geogebra.org/m/n6KXp4hE'>Ge\n",
+    "\n",
     "$$x_{n+1}=x_n-\\frac{f(x_n)}{f^\\prime(x_n)}$$\n",
     "\n",
     "### Newtons metode"
