--- a/01_Undervisningsnotater/9.-Likninger/Newtons_metode.ipynb
+++ b/01_Undervisningsnotater/9.-Likninger/Newtons_metode.ipynb
@@ -30,7 +30,7 @@
    "source": [
     "### Neste x-verdi\n",
     "\n",
-    "<a href='https://www.geogebra.org/m/n6KXp4hE'>Ge\n",
+    "<a href='https://www.geogebra.org/m/n6KXp4hE'>GeoGebra</a>\n",
     "\n",
     "$$x_{n+1}=x_n-\\frac{f(x_n)}{f^\\prime(x_n)}$$\n",
     "\n",
@@ -95,62 +95,6 @@
     "for i in range(len(x_0)):\n",
     "    print(f'Nullpunkt: x = {newtons_metode(f, x_0[i]):.2f}')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
