--- a/02_Oppgaver/Innlevering2.ipynb
+++ b/02_Oppgaver/Innlevering2.ipynb
@@ -77,6 +77,7 @@
     "\n",
     "url ='https://www.uio.no/studier/emner/matnat/math/MAT-INF1100/h18/obliger/running.txt'\n",
     "df = pd.read_csv(url, sep=',', header=None)\n",
+    "df.columns = ['tid', 'fart']\n",
     "df"
    ]
   },
