--- a/02_Oppgaver/Innlevering2.ipynb
+++ b/02_Oppgaver/Innlevering2.ipynb
@@ -54,7 +54,7 @@
     "\n",
     "Kan vente med til diff\n",
     "\n",
-    "c) Gi en algoritme for å beregne en tilnærming til objektets avstand $s(t)$ fra startpunktet ut fra de beregnede verdiene når $v(t) = s′(t)$ og $s(t0) = 0$.\n",
+    "c) Gi en algoritme for å beregne en tilnærming til objektets avstand $s(t)$ fra startpunktet ut fra de beregnede verdiene når $v(t) = s′(t)$ og $s(t_0) = 0$.\n",
     "\n",
     "<a href='https://www.uio.no/studier/emner/matnat/math/MAT-INF1100/h18/obliger/running.txt'>Datafil</a>\n",
     "___"
@@ -96,17 +96,17 @@
    "metadata": {},
    "source": [
     "### Oppgave 5\n",
-    "Løs diffligningene numerisk og plot $x(t),\\; t\\in[0,5]$:\n",
+    "Løs diffligningene numerisk og plot $y(t),\\; t\\in[0,5]$:\n",
     "\n",
     "    i)\n",
-    "$$x′=t+x,\\; x(0)=1.$$\n",
+    "$$y′(t)=t+y(t),\\; y(0)=1.$$\n",
     "\n",
     "    ii)\n",
-    "$$x′ + x^2=􏰁 1,\\; x(0)=0$$\n",
+    "$$y′(t) + y(t)^2=􏰁 1,\\; y(0)=0$$\n",
     "\n",
     "    iii)\n",
     "    \n",
-    "$$x′ = \\frac{t}{1+x^2},\\; x(0)=1.$$\n",
+    "$$y′(t) = \\frac{t}{1+y(t)^2},\\; y(0)=1.$$\n",
     "\n",
     "___\n"
    ]
