--- a/02_Oppgaver/Innlevering2.ipynb
+++ b/02_Oppgaver/Innlevering2.ipynb
@@ -23,7 +23,7 @@
     "### Oppgave 1\n",
     "    i)    Utled og forklar Newtons metode.\n",
     "    ii)   Gjør oppgave 9.9 fra bok\n",
-    "    iii)  Sammenlign resultatet i b)når du brukte Newtons metode med Halveringsmetoden for ulike steglengder.\n",
+    "    iii)  Sammenlign resultatet i a)når du brukte Newtons metode med Halveringsmetoden for ulike steglengder.\n",
     "    iiii) Plot feilen svarene fra de numeriske metodene gir ved ulik steglengde. \n",
     "    \n",
     "___"
@@ -99,14 +99,14 @@
     "Løs diffligningene numerisk og plot $y(t),\\; t\\in[0,5]$:\n",
     "\n",
     "    i)\n",
-    "$$y′(t)=t+y(t),\\; y(0)=1.$$\n",
+    "$$y^{\\prime}(t)=t+y(t),\\; y(0)=1.$$\n",
     "\n",
     "    ii)\n",
-    "$$y′(t) + y(t)^2=􏰁 1,\\; y(0)=0$$\n",
+    "$$y^{\\prime}(t) + y(t)^2=􏰁 1,\\; y(0)=0$$\n",
     "\n",
     "    iii)\n",
     "    \n",
-    "$$y′(t) = \\frac{t}{1+y(t)^2},\\; y(0)=1.$$\n",
+    "$$y^{\\prime}(t) = \\frac{t}{1+y(t)^2},\\; y(0)=1.$$\n",
     "\n",
     "___\n"
    ]
