--- a/03_Løsningsforslag/Oppgaver-fra-boka/4_Tester_og_løkker_løsningsforslag.ipynb
+++ b/03_Løsningsforslag/Oppgaver-fra-boka/4_Tester_og_løkker_løsningsforslag.ipynb
@@ -2629,7 +2629,7 @@
     "\n",
     "Newtons binomialformel forteller oss hvordan en kan regne ut $(a + b)^n$ for et heltall $n$ og vilkårlige tallverdier $a$ og $b$. Den sier at\n",
     "\n",
-    "$$(a+b)^2 = \\sum_{r=0}^n\\binom{n}{r}a^{n-r}b^r$$\n",
+    "$$(a+b)^n = \\sum_{r=0}^n\\binom{n}{r}a^{n-r}b^r$$\n",
     "\n",
     "der $\\binom{n}{r}=\\frac{n!}{r!(n-r)!}$. For eksempel hvis $n=4$, så er\n",
     "\n",
@@ -2776,7 +2776,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
