--- a/01_Undervisningsnotater/5.-Lister-og-plotting/5.1.3_Matplotlib.ipynb
+++ b/01_Undervisningsnotater/5.-Lister-og-plotting/5.1.3_Matplotlib.ipynb
@@ -171,7 +171,6 @@
    "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt\n",
-    "plt.style.use('default')\n",
     "%config InlineBackend.figure_format = 'svg'"
    ]
   },
@@ -1612,6 +1611,9 @@
     }
    ],
    "source": [
+    "import matplotlib.pyplot as plt\n",
+    "%config InlineBackend.figure_format = 'svg'\n",
+    "\n",
     "plt.xlabel('$x$') # Merker x-aksen\n",
     "plt.ylabel('$f(x)$') # Merker y-aksen\n",
     "plt.title('En tittel') #Tittel\n",
