--- a/01_Undervisningsnotater/7.-Derivasjon-og-integrasjon/7.1_Den_deriverte.ipynb
+++ b/01_Undervisningsnotater/7.-Derivasjon-og-integrasjon/7.1_Den_deriverte.ipynb
@@ -11,26 +11,43 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Definisjonen av den deriverte\n",
+    "### Litt om rette linjer.\n",
+    "En rett linje har likningen $y=ax+b$, der a er stigningstallet.\n",
+    "Vi kan definere stigningstallet til en rett linje dersom vi vet koordinatene til to punkter på linja. Da har vi \n",
     "\n",
-    "Den deriverte til en funksjon $f$ i et punkt $a$ er stigningstallet mellom a og et punkt som er uendelig nærme a. Vi kaller dette punktet $a+\\Delta x$, og den deriverte er gitt ved:\n",
+    "$$a=\\frac{y_2−y_1}{x_2−x_1},$$\n",
     "\n",
-    "$$f^\\prime(a)=\\lim_{\\Delta x \\to 0} \\frac{f(a+\\Delta x) - f(a)}{\\Delta x}$$"
+    "hvor $(x_1,y_1)$ er koordinatet til det første punktet, og $(x_2,y_2)$ er koordinatet til det andre punktet. Denne formelen kalles ofte for \"topunktsformelen\"\n",
+    "\n",
+    "Når vi ønsker å vite stigningen til en funksjon/graf i et bestemt punkt, så trenger vi å vite stigningstallet til den rette linjen som såvidt er borti (tangerer) funksjonen/grafen i dette punktet. En slik linje kaller vi en tangent og definerer den som en linje som deler kun ett punkt med funksjonen. Rett ovenfor så vi derimot at vi trenger to punkter for å kunne regne ut stigningstallet til en rett linje. Vi må derfor ha en linje som går gjennom to punkter på funksjonen/grafen; vi kaller en slik linje for en sekant. La oss oppsummere så langt:\n",
+    "\n",
+    "\n",
+    "### Tangent og sekant.\n",
+    "* En tangent er en linje som snitter eller er såvidt borti en graf. Rent matematisk sier vi at den deler kun ett punkt med grafen.\n",
+    "* En sekant er en linje som skjærer grafen i to punkter. Vi kan bruke en slik linje til å regne ut stigningstallet til linjen med topunktsformelen.\n",
+    "\n",
+    "\n",
+    "#### Numerisk derivasjon\n",
+    "Numerisk derivasjon går tilbake til den grunnleggende idéen - stigningstall. Den enkleste numeriske metoden er rett og slett å begynne med definisjonen av den deriverte i et punkt x. Vi endrer notasjonen litt og setter $\\Delta x = x_2 - x_1$, $f(x+\\Delta x)=y_2$ og $f(x)=y_1$.\n",
+    "\n",
+    "\n",
+    "\n",
+    "$$f^\\prime(x)=\\lim_{\\Delta x \\to 0} \\frac{f(x+\\Delta x) - f(x)}{\\Delta x}$$\n",
+    "\n",
+    "\n",
+    "velge  $\\Delta x$ som et lite tall og regne ut\n",
+    "\n",
+    "$$f^\\prime(x) \\approx \\frac{f(x + \\Delta x) - f(x)}{\\Delta x}$$"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "## Newtons kvotient\n",
-    "Vi tilnærmer den deriverte med Newtons kvotient. Den deriverte til en funksjon $f$ kan tilnærmes slik dersom $h$ er liten.\n",
+    "Denne metoden kalles Newtons kvotient og er en tilnærming til den deriverte. Den deriverte til en funksjon $f$ kan tilnærmes slik dersom $h$ er liten.\n",
     "\n",
-    "$$f^\\prime(a)=\\lim_{\\Delta x \\to 0} \\frac{f(a + \\Delta x) - f(a)}{\\Delta x} \\approx \\frac{f(a + h) - f(a)}{h}$$\n"
+    "$$f^\\prime(a) \\approx \\frac{f(a + h) - f(a)}{h}$$\n"
    ]
   },
   {
@@ -5946,7 +5963,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.7.2"
   }
  },
  "nbformat": 4,
