--- a/01_Undervisningsnotater/8.-Differensiallikninger/04_Fritt_fall.ipynb
+++ b/01_Undervisningsnotater/8.-Differensiallikninger/04_Fritt_fall.ipynb
@@ -23,7 +23,7 @@
     "-  $m=0.00326$ kg, massen til muffinsformen\n",
     "\n",
     "\n",
-    "Vi bruker først newtons første lov om summen av krefter og så andre lov. $\\Sigma F = ma$. Vi setter også alle konstanetene til $\\xi$ $L=\\frac{1}{2}\\, \\rho \\, C_D \\, A \\, v^2 = \\xi v^2$\n",
+    "Vi bruker først newtons første lov om summen av krefter og så andre lov. $\\Sigma F = ma$. Vi setter også alle konstanetene til $\\xi$, $L=\\frac{1}{2}\\, \\rho \\, C_D \\, A \\, v^2 = \\xi v^2$\n",
     "\n",
     "\n",
     "\n",
