--- a/01_Undervisningsnotater/9.-Likninger/Halveringsmetoden.ipynb
+++ b/01_Undervisningsnotater/9.-Likninger/Halveringsmetoden.ipynb
@@ -88,7 +88,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def fg(x):\n",
+    "def f(x):\n",
     "    return x**2"
    ]
   },
@@ -119,7 +119,7 @@
     }
    ],
    "source": [
-    " halveringsmetoden(fg, -9, 10, 10)"
+    " halveringsmetoden(f, -9, 10, 10)"
    ]
   },
   {
