--- a/01_Undervisningsnotater/8.-Differensiallikninger/04_Fritt_fall.ipynb
+++ b/01_Undervisningsnotater/8.-Differensiallikninger/04_Fritt_fall.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "\n",
     "Draget, foråsaket av luftmotstand, til et objekt kan utrykkes som\n",
-    "$$ L=\\frac{1}{2}\\, \\rho \\, C_D \\, A \\, v^2 $$\n",
+    "$$ L=\\tfrac{1}{2}\\, \\rho \\, C_D \\, A \\, v^2 $$\n",
     "der:\n",
     "-  $C_D$ er dragkoeffisienten for legemet\n",
     "-  $\\rho$ (gresk bokstav rho) er mediets (gassens eller væskens) tetthet\n",
